==> micropython/micropython/ports/rp2/machine_pin.c <==
#include <stdio.h>
#include <string.h>
#include "py/runtime.h"
#include "py/mphal.h"
#include "extmod/modmachine.h"
#include "extmod/virtpin.h"
#include "shared/runtime/mpirq.h"
#include "modmachine.h"
#include "machine_pin.h"
#include "hardware/irq.h"
#include "hardware/regs/intctrl.h"
#include "hardware/structs/iobank0.h"
#include "hardware/structs/padsbank0.h"
#define GPIO_PULL_UP (1)
#define GPIO_PULL_DOWN (2)
#define GPIO_IRQ_ALL (0xf)
#define GPIO_GET_FUNCSEL(id) ((iobank0_hw->io[(id)].ctrl & IO_BANK0_GPIO0_CTRL_FUNCSEL_BITS) >> IO_BANK0_GPIO0_CTRL_FUNCSEL_LSB)
#define GPIO_IS_OUT(id) (sio_hw->gpio_oe & (1 << (id)))
#define GPIO_IS_PULL_UP(id) (padsbank0_hw->io[(id)] & PADS_BANK0_GPIO0_PUE_BITS)
#define GPIO_IS_PULL_DOWN(id) (padsbank0_hw->io[(id)] & PADS_BANK0_GPIO0_PDE_BITS)
#define GPIO_IS_OPEN_DRAIN(id) (machine_pin_open_drain_mask & (1 << (id)))
#define MICROPY_HW_PIN_RESERVED(i) (0)

void machine_pin_deinit(void) {
    for (int i = 0; i < NUM_BANK0_GPIOS; ++i) {
        if (MICROPY_HW_PIN_RESERVED(i)) {
            continue;
        }
        gpio_set_irq_enabled(i, GPIO_IRQ_ALL, false);
    }
    irq_remove_handler(IO_IRQ_BANK0, gpio_irq);
}

static mp_obj_t machine_pin_obj_init_helper(const machine_pin_obj_t *self, size_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {

    // parse args
    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

    if (is_ext_pin(self) && args[ARG_pull].u_obj != mp_const_none) {
        mp_raise_ValueError("pulls are not supported for external pins");
    }

    if (is_ext_pin(self) && args[ARG_alt].u_int != GPIO_FUNC_SIO) {
        mp_raise_ValueError("alternate functions are not supported for external pins");
    }

    // get initial value of pin (only valid for OUT and OPEN_DRAIN modes)
    int value = -1;
    if (args[ARG_value].u_obj != mp_const_none) {
        value = mp_obj_is_true(args[ARG_value].u_obj);
    }

    // configure mode
    if (args[ARG_mode].u_obj != mp_const_none) {
        mp_int_t mode = mp_obj_get_int(args[ARG_mode].u_obj);
        if (is_ext_pin(self)) {
            #if MICROPY_HW_PIN_EXT_COUNT
            // The regular Pins are const, but the external pins are mutable.
            machine_pin_obj_t *mutable_self = (machine_pin_obj_t *)self;
            machine_pin_ext_config(mutable_self, mode, value);
            #endif
        } else if (mode == MACHINE_PIN_MODE_IN) {
            mp_hal_pin_input(self->id);
        } else if (mode == MACHINE_PIN_MODE_OUT) {
            if (value != -1) {
                // set initial output value before configuring mode
                gpio_put(self->id, value);
            }
            mp_hal_pin_output(self->id);
        } else if (mode == MACHINE_PIN_MODE_OPEN_DRAIN) {
            mp_hal_pin_open_drain_with_value(self->id, value == -1 ? 1 : value);
        } else {
            // Configure alternate function.
            mp_uint_t af = args[ARG_alt].u_int;
            if (machine_pin_find_alt(self, af) == NULL) {
                mp_raise_msg_varg(&mp_type_ValueError, MP_ERROR_TEXT("invalid pin af: %d"), af);
            }
            gpio_set_function(self->id, af);
            machine_pin_open_drain_mask &= ~(1 << self->id);
        }
    }

    if (!is_ext_pin(self)) {
        // Configure pull (unconditionally because None means no-pull).
        uint32_t pull = 0;
        if (args[ARG_pull].u_obj != mp_const_none) {
            pull = mp_obj_get_int(args[ARG_pull].u_obj);
        }
        gpio_set_pulls(self->id, pull & GPIO_PULL_UP, pull & GPIO_PULL_DOWN);
    }
    return mp_const_none;
}

static mp_obj_t machine_pin_call(mp_obj_t self_in, size_t n_args, size_t n_kw, const mp_obj_t *args) {
    mp_arg_check_num(n_args, n_kw, 0, 1, false);
    machine_pin_obj_t *self = self_in;
    if (n_args == 0) {
        // get pin
        if (is_ext_pin(self)) {
            #if MICROPY_HW_PIN_EXT_COUNT
            return MP_OBJ_NEW_SMALL_INT(machine_pin_ext_get(self));
            #endif
        } else {
            return MP_OBJ_NEW_SMALL_INT(gpio_get(self->id));
        }
    } else {
        // set pin
        bool value = mp_obj_is_true(args[0]);
        if (is_ext_pin(self)) {
            #if MICROPY_HW_PIN_EXT_COUNT
            machine_pin_ext_set(self, value);
            #endif
        } else if (GPIO_IS_OPEN_DRAIN(self->id)) {
            MP_STATIC_ASSERT(GPIO_IN == 0 && GPIO_OUT == 1);
            gpio_set_dir(self->id, 1 - value);
        } else {
            gpio_put(self->id, value);
        }
    }
    return mp_const_none;
}

static mp_obj_t machine_pin_irq(size_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {
    enum { ARG_handler, ARG_trigger, ARG_hard };
    static const mp_arg_t allowed_args[] = {
        { MP_QSTR_handler, MP_ARG_OBJ, {.u_rom_obj = MP_ROM_NONE} },
        { MP_QSTR_trigger, MP_ARG_INT, {.u_int = MP_HAL_PIN_TRIGGER_FALL | MP_HAL_PIN_TRIGGER_RISE} },
        { MP_QSTR_hard, MP_ARG_BOOL, {.u_bool = false} },
    };
    machine_pin_obj_t *self = MP_OBJ_TO_PTR(pos_args[0]);
    if (is_ext_pin(self)) {
        mp_raise_ValueError(MP_ERROR_TEXT("expecting a regular GPIO Pin"));
    }

    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args - 1, pos_args + 1, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

    machine_pin_irq_obj_t *irq = machine_pin_get_irq(self->id);

    if (n_args > 1 || kw_args->used != 0) {
        // Update IRQ data.
        mp_obj_t handler = args[ARG_handler].u_obj;
        mp_uint_t trigger = args[ARG_trigger].u_int;
        bool hard = args[ARG_hard].u_bool;
        mp_hal_pin_interrupt(self->id, handler, trigger, hard);
    }
    return MP_OBJ_FROM_PTR(irq);
}

static mp_uint_t machine_pin_irq_trigger(mp_obj_t self_in, mp_uint_t new_trigger) {
    machine_pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
    machine_pin_irq_obj_t *irq = MP_STATE_PORT(machine_pin_irq_obj[self->id]);
    gpio_set_irq_enabled(self->id, GPIO_IRQ_ALL, false);
    irq->flags = 0;
    irq->trigger = new_trigger;
    gpio_set_irq_enabled(self->id, new_trigger, true);
    return 0;
}
